# polars-helper

./: .gitignore  LICENSE  Makefile  pyproject.toml
src/polars_helper/: loader.py
tests/: test_loader.py
tests/test_data/: input.csv  new_file.parquet
